# etl_project

./: main.py  pyproject.toml
src/repositories/: mysql_repository.py  omie_http_repository.py
src/services/omie_market_price/: omie_data_service.py
